--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                <h2 class="content-title-company">About Our Company</h2>
                <p>
                   The goal isn’t only to build a website but goal is also to build
-                  your business beccause , web is our playground. Thinking forward
+                  your business because , web is our playground. Thinking forward
                   towards the goal & transforming ideas thus creating a concise Vision
                   for detail.
                </p>
