--- a/pages/team.html
+++ b/pages/team.html
@@ -55,13 +55,7 @@
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           <strong>AN YOUNG ENGINEER WHO WORKS WITH FULL DEDICATION AND ENTHUTHIASUM.</strong>
-                           <b>KEY SKILLS:- </b><i> <strong> WEB DEVELOPER, WEB DESIGNER, LOGO DESIGNING.
-                           CERTIFIED IN BLOGGING , AFFILATE MARKETING , SEM, SEO, SMM, ONLINE,
-                           E-COMMERCE, EMAIL, CONTENT MARKETING AND WEB ANALYTICS.
-                           BUSINESS DEVELOPER WEBSITE CREATOR</strong> </i>
-                        </p>
-                        <div class="testimonial-content">
+                           An young engineer who works with full dedication and enthusiasm. Key skills: - web developer, web designer, logo designing. Certified in blogging, affiliate marketing , sem, seo, smm, online, e-commerce, email, content marketing and web analytics. Business developer website creator.                        <div class="testimonial-content">
                            <div class="pic">
                               <img src="../img/ourteam/deepakpaswan.jpg" alt="Deepak Paswan" />
                            </div>
@@ -72,14 +66,7 @@
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           <strong> AN EXPERIENCED ENGINEER WHO WORKS WITH HIHGLY MOTIVATING AND INNOVATIVE.</strong>
-                           <b>KEY SKILLS:-</b> <i><b>
-                           PHP DEVELOPER , GRAPHIC DESIGNER,WEB DESIGNER, LOGO DESIGNING.
-                           BUSINESS ANALYST , DEALS WITH BRANDING AND PROMOTIONS.
-                           CLIENTS DEALT REQUIREMENT AND BUSINESS DEVELOPMENT TOO.
-                           </b></i>
-                        </p>
-                        <div class="testimonial-content">
+                           An experienced engineer who works with highly motivating and innovative. Key skills:- php developer , graphic designer, web designer, logo designing. Business analyst , deals with branding and promotions. Clients dealt requirement and business development too.                        <div class="testimonial-content">
                            <div class="pic">
                               <img src="../img/ourteam/pushpendrakumar.jpg" alt="pushpendra kumar" />
                            </div>
@@ -90,13 +77,7 @@
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           <strong> AN YOUNG ENGINEER WHO WORKS WITH HIHGLY MOTIVATING AND INNOVATIVE.</strong>
-                           <b>KEY SKILLS:-</b> <i><b>
-                           GRAPHIC DESIGNER,WEB DEVELOPER, WEB DESIGNER, LOGO DESIGNING.
-                           BUSINESS ANALYST , DEALS WITH LAED GENERATION AND MANAGEMENT MEETNGS.
-                           CLIENTS DEALT REQUIREMENT AND BUSINESS DEVELOPMENT TOO.
-                           </b></i>
-                        </p>
+                           An young engineer who works with highly motivating and innovative. Key skills:- graphic designer, web developer, web designer, logo designing. Business analyst , deals with lead generation and management meetings. Clients dealt requirement and business development too.                         </p>
                         <div class="testimonial-content">
                            <div class="pic">
                               <img src="../img/ourteam/surajprasad.jpg" alt="SURAJ PRASAD" />
@@ -108,13 +89,7 @@
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           <strong> AN YOUNG ENGINEER WHO WORKS WITH MANAGEMENT REQUIREMENT OF THE PROJECTS.</strong>
-                           <b>KEY SKILLS:-</b> <i><b>
-                           IMMENSE KNOWLEDGE IN ELECTRONICS AND TELECOMMUNICTION SEMANTICS,
-                           DEALS WITH THE SYSTEM ENGINERING , PLANNING AND REQUIREMENT OF THE REESOURCES FOR THE PROJECT
-                           FULL-FILLMENT.
-                           </b></i>
-                        </p>
+                           An young engineer who works with management requirement of the projects. Key skills:-immense knowledge in electronics and telecommunication semantics, deals with the system engineering , planning and requirement of the resources for the project full-fillment.                                  </p>
                         <div class="testimonial-content">
                            <div class="pic">
                               <img src="../img/ourteam/ranjitjaswar.jpg" alt="Ranjit jaiswar" />
@@ -126,11 +101,7 @@
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           <strong> AN EXPERIENCED HR WHO HAS THE YEARS OF EXPERIENCE IN HIRING PROCESS.</strong>
-                           <b>KEY SKILLS:-</b> <i><b>
-                           GOOD ANALYTICAL SKILLS, PROVIDE MAN POWER TO YOUR BUSINESS , RIGHT CANDIDATES FOR YOUR DEALS , AND
-                           DEAL WITH ALL THE MANAGEMWNT PROCESSS. CERTIFIED BLOGGER.
-                           </b></i>
+                           An experienced hr who has the years of experience in hiring process. Key skills:- good analytical skills, provide man power to your business , right candidates for your deals , and deal with all the management process. Certified blogger.                         
                         </p>
                         <div class="testimonial-content">
                            <div class="pic">
@@ -143,13 +114,7 @@
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           <strong> AN YOUNG ENGINEER WHO WORKS WITH FULL HARD WORK AND DEDICATION.</strong>
-                           <b>KEY SKILLS:-</b> <i><b>
-                           DIGITAL MARKETING , SEO , SMM , SEM , NETOWRKING AND HARDWARE ,
-                           MEDIA MANAGEMENT SPECIALIST AND EDITOR . ONLINE AS WELL AS OFFLINE MARKETING .
-                           </b></i>
-                        </p>
-                        <div class="testimonial-content">
+                           An young engineer who works with full hard work and dedication. Key skills:- digital marketing , seo , smm , sem , networking and hardware , media management specialist and editor. Online as well as offline marketing .                        <div class="testimonial-content">
                            <div class="pic">
                               <img src="../img/ourteam/abhijitjaiswar.jpg" alt="Abhihjit jaiswar" />
                            </div>
