--- a/pages/about.html
+++ b/pages/about.html
@@ -60,7 +60,7 @@
             </span>
          </div>
       </div>
-      <section class="section section-dark">
+      <section class="section section-dark" data-aos="fade-right">
          <h2>OUR MISSION</h2>
          <p>
             “A successful website does great things 
