--- a/pages/about.html
+++ b/pages/about.html
@@ -60,7 +60,7 @@
             </span>
          </div>
       </div>
-      <section class="section section-dark" data-aos="fade-right">
+      <section class="section section-dark" >
          <h2>OUR MISSION</h2>
          <p>
             “A successful website does great things 
@@ -72,7 +72,7 @@
       <div class="pimg2">
          <div class="ptext"></div>
       </div>
-      <section class="section section-light" data-aos="fade-left">
+      <section class="section section-light">
          <h2>OUR STRATERGY</h2>
          <p>
             “What separates design from art is that design is meant to be functional. Website without visitors is like a ship lost in the horizon.Thus ,the success of every websites now depends on search engine optimisation and digital marketing strategy. If you are on first page of all major search engines then you are ahead among your competitors in terms of online sales.” We lead all the campaigns required to be always upfront smooth and running in accordance.
@@ -81,7 +81,7 @@
       <div class="pimg3">
          <div class="ptext"></div>
       </div>
-      <section class="section section-dark" data-aos="fade-right">
+      <section class="section section-dark" >
          <h2>OUR GOALS</h2>
          <p>
             “Web design is not just about creating pretty layouts. It’s about understanding the marketing challenge behind your business To become successful online, you only need to remember the following : Good Heart + Passion + Web Design + SEO + Digital Marketing + Dedication + Positiveness + Patience = Success.” 
@@ -90,7 +90,7 @@
       </section>
       <div class="pimg1">
          <div class="ptext">
-            <span class="border" data-aos="fade-down">
+            <span class="border">
             B-D
             </span>
          </div>
@@ -222,11 +222,5 @@
          </div>
       </footer>
       <script src="../js/index.js"></script>
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-      <script>
-         AOS.init({
-           duration: 1500
-         });
-      </script>
    </body>
 </html>
