--- a/pages/blog.html
+++ b/pages/blog.html
@@ -48,7 +48,7 @@
          <h2>HOVER ON PICS TO READ THE BLOG</h2>
          &mdash;
          <h2>BEST WEBSERIES WORLDWIDE</h2>
-         <div class="main" data-aos="fade-up">
+         <div class="main">
             <div class="singleBlog">
                <img src="../img/blog/webseries/breakingbad.jpg" alt="breaking bad thriller web series" />
                <div class="blogContent">
@@ -107,7 +107,7 @@
          <h2>HOVER ON PICS TO READ THE BLOG</h2>
          &mdash;
          <h2>BEST MOVIES WORLDWIDE</h2>
-         <div class="main" data-aos="fade-up">
+         <div class="main">
             <div class="singleBlog">
                <img src="../img/blog/movies/thegodfather.jpg" alt="god father" />
                <div class="blogContent">
@@ -166,7 +166,7 @@
          <h2>HOVER ON PICS TO READ THE BLOG</h2>
          &mdash;
          <h2>LIFESTYLE</h2>
-         <div class="main" data-aos="fade-up">
+         <div class="main">
             <div class="singleBlog">
                <img src="../img/blog/lifestyle/mensshoes.jpg" alt="top 10 casual shoes or men" />
                <div class="blogContent">
@@ -225,7 +225,7 @@
          <h2>HOVER ON PICS TO READ THE BLOG</h2>
          &mdash;
          <h2>EXCERSIZE FOR EVERYONE</h2>
-         <div class="main" data-aos="fade-up">
+         <div class="main">
             <div class="singleBlog">
                <img src="../img/blog/excersize/workout.jpg" alt="top 10 excersise at home" />
                <div class="blogContent">
@@ -283,7 +283,7 @@
          <h2>HOVER ON PICS TO READ THE BLOG</h2>
          &mdash;
          <h2>FOOD</h2>
-         <div class="main" data-aos="fade-up">
+         <div class="main">
             <div class="singleBlog">
                <img src="../img/blog/food/fruitsummer.jpg" alt="top 10 fruits for summer" />
                <div class="blogContent">
@@ -342,7 +342,7 @@
          <h2>HOVER ON PICS TO READ THE BLOG</h2>
          &mdash;
          <h2>TRAVEL</h2>
-         <div class="main" data-aos="fade-up">
+         <div class="main">
             <div class="singleBlog">
                <img src="../img/blog/travel/countrytravel.jpg" alt="best contry for vaccation" />
                <div class="blogContent">
@@ -401,7 +401,7 @@
          <h2>HOVER ON PICS TO READ THE BLOG</h2>
          &mdash;
          <h2>TECHNOLOGY & GADGETS</h2>
-         <div class="main" data-aos="fade-up">
+         <div class="main">
             <div class="singleBlog">
                <img src="../img/blog/technoogy/smartphones.svg" alt="top budget smartphones" />
                <div class="blogContent">
@@ -548,12 +548,5 @@
             </div>
          </div>
       </footer>
-      <script src="../js/index.js"></script>
-      <script>
-         AOS.init({
-           duration:1500,
-         });
-         
-      </script>
    </body>
 </html>
