--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,12 +54,12 @@
 
       <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
       <div class="container">
-         <div class="wrapper" data-aos="fade-up">
+         <div class="wrapper">
             <div class="company-info">
-               <h3 data-aos="fade-left">
+               <h3>
                   <img src="../img/logos/title-logo.png" alt="small-logo" />
                </h3>
-               <ul data-aos="fade-right">
+               <ul>
                   <li><i class="fa fa-road"></i>MUMBAI, MAHARASHTRA.</li>
                   <li><i class="fa fa-phone"></i> (+91) 88 98 53 70 39</li>
                   <li><i class="fa fa-envelope"></i> mickeydp@businessdevelopers.com</li>
@@ -225,14 +225,6 @@
       </footer>
       <script src="../js/index.js"></script>
       <script src="../js/main.js"></script>
-
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
-
-      <script>
-         AOS.init({
-           duration: 1500
-         });
-      </script>
    </body>
 </html>
