--- a/pages/digital.html
+++ b/pages/digital.html
@@ -49,20 +49,20 @@
       <main>
          <!-- Top Container -->
          <section class="top-container">
-            <header class="showcase" data-aos="fade-right">
+            <header class="showcase">
                <h1>Digital Marketing</h1>
                <p>We turn good ideas into great products.
                   We make up the news, so you don’t have to!
                </p>
             </header>
-            <div class="top-box top-box-a" data-aos="fade-left">
+            <div class="top-box top-box-a">
                <i class="fas fa-search fa-4x"></i>
                <h3>Search engine marketing </h3>
                <p>(SEM) is a form of Internet marketing that involves the promotion of websites by increasing their
                   visibility in search engine results pages (SERPs) primarily through paid advertising
                </p>
             </div>
-            <div class="top-box top-box-b" data-aos="fade-left">
+            <div class="top-box top-box-b">
                <i class="fas fa-users fa-4x"></i>
                <h3>Search Engine Optimization</h3>
                <p>Search engine optimization (SEO) is the process of affecting the online visibility of a website or a web
@@ -71,7 +71,7 @@
             </div>
          </section>
          <!-- Boxes Section -->
-         <section class="boxes" data-aos="fade-up">
+         <section class="boxes">
             <div class="box">
                <i class="fas fa-video fa-4x"></i>
                <h3>Video Marketing</h3>
@@ -105,7 +105,7 @@
             </div>
          </section>
          <!-- Info Section -->
-         <section class="info" data-aos="fade-right">
+         <section class="info">
             <div>
                <h2>Social Media Marketing</h2>
                <p>This statistic shows the number of social media users worldwide from 2010 to 2016 with projections until
@@ -114,9 +114,9 @@
                   So here we are to address you and your offers to others by which eveyone can get benfited.
                </p>
             </div>
-            <img src="../img/digitalmarketing/techMarketing.jpg" alt="marketing we do all types of digital marketing" data-aos="fade-left">
+            <img src="../img/digitalmarketing/techMarketing.jpg" alt="marketing we do all types of digital marketing">
          </section>
-         <section class="boxes" data-aos="fade-up">
+         <section class="boxes">
             <div class="box">
                <i class="fab fa-youtube fa-4x"></i>
                <h3>Youtube</h3>
@@ -232,12 +232,6 @@
       </footer>
       <!-- Wrapper Ends -->
       <script src="../js/index.js"></script>
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-      <script>
-         AOS.init({
-           duration: 2000,
-         });
-      </script>
       <script src='https://use.fontawesome.com/releases/v5.0.11/js/all.js'></script>
    </body>
 </html>
