--- a/pages/services.html
+++ b/pages/services.html
@@ -50,7 +50,7 @@
       <main>
          <!-- Top Container -->
          <section class="top-container">
-            <header class="showcase" data-aos="fade-right">
+            <header class="showcase">
                <h1>Web Devlopers</h1>
                <p>
                   We build the quailty content websites for you to boost up your
@@ -58,7 +58,7 @@
                   path.
                </p>
             </header>
-            <div class="top-box top-box-a" data-aos="fade-left">
+            <div class="top-box top-box-a">
                <i class="fas fa-code fa-4x"></i>
                <h3>Web Development</h3>
                <p>
@@ -66,7 +66,7 @@
                   visitors are on the way
                </p>
             </div>
-            <div class="top-box top-box-b" data-aos="fade-left">
+            <div class="top-box top-box-b">
                <i class="fas fa-laptop fa-4x"></i>
                <h3>Web Designing</h3>
                <p>
@@ -76,7 +76,7 @@
             </div>
          </section>
          <!-- Boxes Section -->
-         <section class="boxes" data-aos="fade-up">
+         <section class="boxes">
             <div class="box">
                <i class="fab fa-gripfire fa-4x"></i>
                <h3>Graphic Designing</h3>
@@ -112,7 +112,7 @@
             </div>
          </section>
          <!-- Info Section -->
-         <section class="info" data-aos="fade-right">
+         <section class="info">
             <div>
                <h2>Copywriting & Blogging</h2>
                <p>
@@ -123,9 +123,9 @@
                   thoughtful way that will unviel all your dout's and condradiction.
                </p>
             </div>
-            <img src="../img/services/bloging.jpg" alt="we are certified bloggers in all types of blogging and copywrite" data-aos="fade-left">
+            <img src="../img/services/bloging.jpg" alt="we are certified bloggers in all types of blogging and copywrite">
          </section>
-         <section class="boxes" data-aos="fade-up">
+         <section class="boxes">
             <div class="box">
                <i class="fas fa-edit fa-4x"></i>
                <h3>Technical Writer</h3>
@@ -160,7 +160,7 @@
                </p>
             </div>
          </section>
-         <section class="boxes" data-aos="fade-up">
+         <section class="boxes">
             <div class="box">
                <i class="fas fa-heartbeat fa-4x"></i>
                <h3>Health & Lifestyle</h3>
@@ -287,12 +287,6 @@
       </footer>
       <!-- Wrapper Ends -->
       <script src="../js/index.js"></script>
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script src='https://use.fontawesome.com/releases/v5.0.11/js/all.js'></script>
-      <script>
-         AOS.init({
-           duration: 1500,
-         });
-      </script>
    </body>
 </html>
