--- a/pages/team.html
+++ b/pages/team.html
@@ -66,7 +66,7 @@
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           An experienced engineer who works with highly motivating and innovative. Key skills:- php developer , graphic designer, web designer, logo designing. Business analyst , deals with branding and promotions. Clients dealt requirement and business development too.                        <div class="testimonial-content">
+                           An experienced engineer who works with highly motivating and innovative.Key skills:- php developer, graphic designer, web designer, logo designing. Business analyst, deals with branding and promotions. Clients dealt requirement and business development too.                        <div class="testimonial-content">
                            <div class="pic">
                               <img src="../img/ourteam/pushpendrakumar.jpg" alt="pushpendra kumar" />
                            </div>
@@ -77,7 +77,7 @@
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           An young engineer who works with highly motivating and innovative. Key skills:- graphic designer, web developer, web designer, logo designing. Business analyst , deals with lead generation and management meetings. Clients dealt requirement and business development too.                         </p>
+                           An young engineer who works with highly motivating and innovative. Key skills:- graphic designer, web developer, web designer, logo designing. Business analyst, deals with lead generation and management meetings.</p>
                         <div class="testimonial-content">
                            <div class="pic">
                               <img src="../img/ourteam/surajprasad.jpg" alt="SURAJ PRASAD" />
@@ -89,7 +89,7 @@
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           An young engineer who works with management requirement of the projects. Key skills:-immense knowledge in electronics and telecommunication semantics, deals with the system engineering , planning and requirement of the resources for the project full-fillment.                                  </p>
+                           An young engineer who works with management requirement of the projects.Key skills:-immense knowledge in electronics and telecommunication semantics, deals with the system engineering, planning and requirement of the resources for the project full-fillment.                                  </p>
                         <div class="testimonial-content">
                            <div class="pic">
                               <img src="../img/ourteam/ranjitjaswar.jpg" alt="Ranjit jaiswar" />
@@ -101,20 +101,20 @@
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           An experienced hr who has the years of experience in hiring process. Key skills:- good analytical skills, provide man power to your business , right candidates for your deals , and deal with all the management process. Certified blogger.                         
+                           An experienced hr who has the years of experience in hiring process. Key skills:- good analytical skills, provide man power to your business ,right candidates for your deals ,and deal with all the management process. Certified blogger.                         
                         </p>
                         <div class="testimonial-content">
                            <div class="pic">
                               <img src="../img/ourteam/sushilsharma.jpg" alt="sushil sharma" />
                            </div>
                            <h3 class="title">Sushil Sharma</h3>
-                           <h3 class="title">B.COM HR EXECUTIVE</h3>
+                           <h3 class="title">BMS HR EXECUTIVE</h3>
                         </div>
                      </div>
                      <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                           An young engineer who works with full hard work and dedication. Key skills:- digital marketing , seo , smm , sem , networking and hardware , media management specialist and editor. Online as well as offline marketing .                        <div class="testimonial-content">
+                           An young engineer who works with full hard work and dedication. Key skills:- digital marketing ,seo ,smm ,sem ,networking and hardware ,media management specialist and editor. Online as well as offline marketing.                        <div class="testimonial-content">
                            <div class="pic">
                               <img src="../img/ourteam/abhijitjaiswar.jpg" alt="Abhihjit jaiswar" />
                            </div>
