--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                      main services or product you offer. you can grow your business &
                      establish a creditable online presence. Collect Contact details
                      for future ongoing relation. Design & productivity connects you”
-                     FlyCorporation is a Web designing & development Company, which is
+                     Business-developers is a Web designing & development Company, which is
                      result oriented. We deliver a nice website design and execute
                      digital marketing campaigns that lead to the success of the
                      clients.We design and develop a website that will certainly
